@@ -33,8 +33,9 @@ import de.fraunhofer.iosb.ilt.sta.service.SensorThingsService;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
+import java.net.MalformedURLException;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
@@ -160,14 +161,17 @@ public class ImporterCsv implements Importer {
 		}
 
 		String input = editorInput.getValue();
-		URI inUrl = null;
+		URL inUrl = null;
 		try {
-			inUrl = new URI(input);
-		} catch (URISyntaxException e) {
+			inUrl = new URL(input);
+			LOGGER.info("Found a url: {}", input);
+		} catch (MalformedURLException ex) {
+			LOGGER.info("Not a url: {} -- {}", input, ex.getMessage());
 		}
 		File inFile = null;
 		try {
 			inFile = new File(input);
+			LOGGER.info("Found a file: {}", input);
 		} catch (Exception e) {
 		}
 
@@ -175,21 +179,21 @@ public class ImporterCsv implements Importer {
 		CSVParser parser;
 		try {
 			if (inUrl != null) {
-				if (inUrl.getScheme().startsWith("http")) {
+				if (inUrl.getProtocol().startsWith("http")) {
 					CloseableHttpClient client = HttpClients.createSystem();
-					HttpGet get = new HttpGet(inUrl);
+					HttpGet get = new HttpGet(inUrl.toURI());
 					CloseableHttpResponse response = client.execute(get);
 					String data = EntityUtils.toString(response.getEntity(), charset);
 					parser = CSVParser.parse(data, format);
-				} else if (inUrl.getScheme().startsWith("ftp")) {
-					URLConnection connection = inUrl.toURL().openConnection();
+				} else if (inUrl.getProtocol().startsWith("ftp")) {
+					URLConnection connection = inUrl.openConnection();
 					try (InputStream stream = connection.getInputStream()) {
 						String data = IOUtils.toString(stream, "UTF-8");
 						parser = CSVParser.parse(data, format);
 					}
 				} else {
-					LOGGER.error("Unsupported scheme: {}.", inUrl.getScheme());
-					throw new ImportException("Unsupported scheme: " + inUrl.getScheme());
+					LOGGER.error("Unsupported scheme: {}.", inUrl.getProtocol());
+					throw new ImportException("Unsupported scheme: " + inUrl.getProtocol());
 				}
 			} else if (inFile != null) {
 				parser = CSVParser.parse(inFile, Charset.forName(charset), format);
@@ -197,7 +201,7 @@ public class ImporterCsv implements Importer {
 				LOGGER.error("Failed");
 				throw new ImportException("No valid input url or file.");
 			}
-		} catch (IOException exc) {
+		} catch (IOException | URISyntaxException exc) {
 			LOGGER.error("Failed", exc);
 			throw new ImportException("Failed to handle csv file.", exc);
 		}
